@@ -28,6 +28,9 @@ RMV	MinVer	FirstA	Name
 3.12	3.12	3.12	HXOPT_ERR_SYS
 3.12	3.12	3.12	HXOPTCB_BY_LONG
 3.12	3.12	3.12	HXOPTCB_BY_SHORT
+3.12	3.0	1.10.0	HXformat_aprintf
+3.12	3.0	1.10.0	HXformat_fprintf
+3.12	3.0	1.10.0	HXformat_sprintf
 3.11	3.11	3.11	HXQUOTE_BASE64
 3.10	3.10	3.10	BUILD_BUG_ON_EXPR
 3.10	3.10	3.10	HX_readlink
@@ -53,9 +56,6 @@ RMV	MinVer	FirstA	Name
 3.5	3.5	3.5	HXQUOTE_LDAPFLT
 3.5	3.5	3.5	HXQUOTE_LDAPRDN
 3.5	3.5	3.5	HXSIZEOF_Z16
-3.5	3.3	3.3	HXformat2_aprintf
-3.5	3.3	3.3	HXformat2_fprintf
-3.5	3.3	3.3	HXformat2_sprintf
 3.5	2.2	2.2	HXproc_run_async
 3.5	2.2	2.2	HXproc_run_sync
 3.4	3.4	3.4	HX_exit
