@@ -21,9 +21,9 @@ static void *funcs[] = {
 	HXformat_init,
 	HXformat_free,
 	HXformat_add,
-	HXformat2_aprintf,
-	HXformat2_fprintf,
-	HXformat2_sprintf,
+	HXformat_aprintf,
+	HXformat_fprintf,
+	HXformat_sprintf,
 	HXdir_open,
 	HXdir_read,
 	HXdir_close,
